An authumn storm blew away lots of compiler warnings...
git-svn-id: https://svn.apache.org/repos/asf/ace/trunk@1536612 13f79535-47bb-0310-9956-ffa450edef68